Fixed height of cal logo because it cut off the top

--- a/app/assets/stylesheets/navbars/home_navbar.scss
+++ b/app/assets/stylesheets/navbars/home_navbar.scss
@@ -48,7 +48,7 @@
         background-position: center;
         background-repeat: no-repeat;
         width: 66px;
-        height: 40px;
+        height: 41px;
 
         &:hover {
           background-image: image_url('logos/CAL_Logo_url_purple.png');
